force-app/main/default/objects/Contact/fields/Cliente_Despacho__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Despacho__c</fullName>
    <formula>Contacto_Sucursal__r.Cliente_Despacho__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente Despacho</label>
    <type>Text</type>
</CustomField>