force-app/main/default/objects/Contact/fields/Contacto_Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Sucursal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto Sucursal</label>
    <referenceTo>Domicilio_de_Cliente__c</referenceTo>
    <relationshipLabel>Contacts (Contacto Sucursal)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>