force-app/main/default/objects/Contact/fields/Describa_prioridades_de_su_cliente__c.field-meta.xml
<CustomField>
    <fullName>Describa_prioridades_de_su_cliente__c</fullName>
    <description>El asesor podrá describir las necesidades especificas del cliente, con mayor detalle.</description>
    <label>Dolores, cómo lo miden, necesidad clave</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>