force-app/main/default/objects/Contact/fields/Domicilio_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Domicilio_de_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domicilio de Cliente</label>
    <referenceTo>Domicilio_de_Cliente__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>