force-app/main/default/objects/Contact/fields/Rut__c.field-meta.xml
<CustomField>
    <fullName>Rut__c</fullName>
    <label>Rut</label>
    <length>15</length>
    <type>Text</type>
</CustomField>