force-app/main/default/objects/Contact/fields/Tipo_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_contacto__c</fullName>
    <label>Tipo de contacto</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Usuario PIA</fullName>
            </value>
            <value>
                <fullName>Comprador</fullName>
            </value>
            <value>
                <fullName>Pagador</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Dueño</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Administrador</fullName>
            </value>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Finanzas</fullName>
            </value>
            <value>
                <fullName>Gestión calidad</fullName>
            </value>
            <value>
                <fullName>Gerente General</fullName>
            </value>
            <value>
                <fullName>Representante Legal</fullName>
            </value>
            <value>
                <fullName>Comprador Pedido por Voz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>